--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -69,4 +69,21 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+
+  h1 {
+    @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+  }
+
+  main, nav {
+    @apply max-w-6xl mx-auto my-12;
+  }
+
+  p {
+    @apply mt-2;
+  }
+
+  h2 {
+    @apply scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight transition-colors first:mt-0
+  }
+
 }
